--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "icehouse-ventures/laravel-chartjs": "^4.1",
         "laravel/framework": "^11.31",
+        "laravel/reverb": "^1.4",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
